fix: composer layout on mobile

--- a/src/features/composer/output/output.module.css
+++ b/src/features/composer/output/output.module.css
@@ -1,6 +1,6 @@
 .output {
-  height: 100vw;
   position: relative;
+
   @media (min-width: 768px) {
     height: auto;
     flex: 1 1 auto;
